# AronaOS

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  busybox-cmd.md  dev-env-info.md  initproc.asm  kernel-qemu  log_jxc.md  rust-toolchain.toml
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config
os/cargo/: config
os/makefile-backup/: Makefile  Makefile_cur
os/src/: config.rs  console.rs  ctypes.rs  entry.S  entry.asm  lang_items.rs  linker-qemu.ld  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs  vm.diff
os/src/boards/: mod.rs  qemu.rs  vf2.rs
os/src/cpus/: hart.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/ramfs/: mod.rs  virtio_ramfs.rs
os/src/executor/: mod.rs
os/src/fat32/: block_cache.rs  dentry.rs  fat.rs  file.rs  fs.rs  inode.rs  layout.rs  mod.rs  time.rs
os/src/fs/: ctypes.rs  fd_table.rs  init.rs  inode.rs  mod.rs  os_inode.rs  path.rs  pipe.rs  stdio.rs  tty.rs
os/src/fs/devfs/: cpu_dma_latency.rs  dev.rs  inode.rs  misc.rs  mod.rs  null.rs  rtc.rs  tty.rs
os/src/fs/ext4/: block_cache.rs  fs.rs  inode.rs  mod.rs  ram_inode.rs
os/src/fs/fat32/: block_cache.rs  fat.rs  fs.rs  inode.rs  layout.rs  mod.rs  time.rs
os/src/futex/: flags.rs  futex.rs  jhash.rs  mod.rs  queue.rs
os/src/mm/: address.rs  cow.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_fault.rs  page_table.rs  shm.rs
os/src/mutex/: mod.rs  spin_mutex.rs
os/src/signal/: action.rs  mod.rs  signo.rs
os/src/sync/: mod.rs  mutex.rs  up.rs
os/src/syscall/: fs.rs  info.rs  mm.rs  mod.rs  process.rs  resource.rs  util.rs
os/src/task/: context.rs  manager.rs  mod.rs  pid.rs  processor.rs  schedule.rs  switch.rs  task.rs
os/src/trap/: context.rs  irq.rs  mod.rs  trap.S
os/src/utilities/: block_on.rs  mod.rs
os/src/utils/: block_on.rs  checksum.rs  error.rs  mod.rs  string.rs
user/: Cargo.toml  Makefile
user/.cargo/: config  config-for-submit
user/cargo/: config
user/src/: console.rs  defs.rs  lang_items.rs  lib.rs  syscall.rs
user/src/archive/: cat_filea.rs  sleep.rs  user_shell.rs  usertests.rs  usertests_simple.rs  yield.rs
(+179 files in other folders)
