[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "vendor/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { path = "vendor/virtio-drivers" }
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
async-task = { version = "4.4.0", default-features = false }

[profile.release]
debug = true

[features]
kernel_tests = []
submit = []
