[package]
name = "user_lib"
version = "0.1.0"
authors = ["Kevin Liu <2424539083@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.3.2"
spin = "0.9.8"

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []
[features]
submit = []
